--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -320,9 +320,9 @@ annex.89.a:0 "모든 주를 라이히에 합병하라"
 annex.89.b:0 "독일어권 스위스를 합병하고, 나머지는 독립시켜라"
 annex.89.c:0 "스위스를 다시 독립시켜라"
 annex.89.e:0 "이탈리아와 프랑스에 스위스 분할을 제안하라"
-annex.90.t:0 "German Switzerland under our control"
-annex.90.d:0 "The peoples of the German-speaking cantons of old Switzerland have finally folded to our control."
-annex.90.a:0 "Great!"
+annex.90.t:0 "독일어권 스위스가 우리 통제하에 들어왔습니다"
+annex.90.d:0 "구 스위스의 독일어권 칸톤이 마침내 우리의 통제에 들어오게 되었습니다."
+annex.90.a:0 "좋았어!"
 annex.91.t:0 "스위스 독립"
 annex.91.d:0 "We have granted independence to Switzerland and welcomed them into the Reichspakt system. Some politicians argue, however, that we should arrange for their close control under a puppet regime."
 annex.91.a:0 "독립을 허가한다"
@@ -574,7 +574,7 @@ annex.147.t:0 "벨로루시의 운명"
 annex.147.d:0 "벨라루스에서의 짧은 작전 끝에, 우린 마침내 벨라루스의 방어를 무너트렸습니다. 민스크는 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
 annex.147.a:0 "벨로루시에 친선정부를 설립해라!"
 annex.147.b:0 "러시아 친구들에게 주어라"
-annex.147.c:0 "Bring them back into our sphere!"
+annex.147.c:0 "우리 영향권에 재편입시켜라!"
 annex.147.e:0 "군사점령을 계속해라!"
 annex.148.t:0 "슬로바키아의 운명"
 annex.148.d:0 "슬로바키아의 산에서의 짧은 작전 끝에, 우린 마침내 방어를 무너트렸습니다. 슬로바키아는 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
@@ -618,8 +618,8 @@ annex.155.a:0 "덴마크 전체를 해방하라"
 annex.155.b:0 "덴마크 섬들을 합병하고 본토만 해방하라"
 annex.155.c:0 "그린란드를 통제하고 아이슬란드를 해방하라"
 annex.155.e:0 "아이슬란드만 해방시키고 덴마크와 그린란드는 납둬라"
-annex.156.t:0 "포르투칼의 운명"
-annex.156.d:0 "Portugal is under our control, but perhaps the Portuguese would be better off governing themselves?"
+annex.156.t:0 "포르투갈의 운명"
+annex.156.d:0 "포르투갈이 우리 통제 아래에 들어왔습니다, 하지만 포르투갈을 스스로 통치하게 두는게 낫지 않을까요?"
 annex.156.a:0 "포르투갈 왕국을 복원하라"
 annex.156.b:0 "포르투갈 공화국을 해방하라"
 annex.156.c:0 "포르투갈 왕국을 우리 왕비님 치하로복원시켜라"
@@ -639,16 +639,16 @@ annex.159.d:0 "After defeating the Union of Britain we now control Great Britain
 annex.159.a:0 "잉글랜드, 스코틀랜드, 웨일즈로 나눠라"
 annex.159.b:0 "충성스런 영국을 만들어라."
 annex.159.c:0 "모든걸 합병한다!"
-annex.160.t:0 "A syndicalist Flanders-Wallonia"
-annex.160.d:0 "The French decided to give partial autonomy to Flanders-Wallonia, installing a new syndicalist government."
+annex.160.t:0 "생디칼리스트 플랑드르-왈로니아"
+annex.160.d:0 "프랑스가 플랑드르-왈로니아에게 부분적인 자치권을 주었으며, 새로운 생디칼리스트 정부를 구성했습니다."
 annex.160.a:0 "크게 달라지는 건 없다."
 annex.161.t:0 "벨기에의 운명"
 annex.161.d:0 "After a short campaign across the fields of Belgium we now control the region and we must decide what to do with it. Belgium is a very divided country and splitting it along cultural lines might make for less trouble afterwards."
-annex.161.a:0 "Liberate a loyal united Flanders-Wallonia"
+annex.161.a:0 "충성스러운 통일된 플랑드르-왈로니아를 설립하라"
 annex.161.b:0 "플랑드르와 왈로니아를 해방하라"
 annex.161.c:0 "플랑드르를 해방하라"
 annex.161.e:0 "플랑드르는 네덜란드의 것이다. 하지만 왈로니아는 해방하라!"
-annex.161.f:0 "Give Flanders to Wallonia and reunite Belgium"
+annex.161.f:0 "플랑드르를 왈로니아에게 주어서 벨기에를 재통일하라"
 annex.162.t:0 "남부 왈로니아의 운명"
 annex.162.d:0 "We now control the southern half of Wallonia that was once occupied by the German army following the Weltkrieg, we must choose what to do with our new piece of Belgium."
 annex.162.a:0 "왈로니아를 해방하라"
@@ -767,7 +767,7 @@ annex.188.a:0 "왕실 캐나다를 해방하라!"
 annex.188.b:0 "캐나다와 퀘벡을 해방하라!"
 annex.188.c:0 "캐나다를 합병하는 것은 필연적 운명이다!"
 annex.188.e:0 "우리의 필연적 운명은 프랑스인들이 아니다, 퀘벡을 해방하고 캐나다를 합병해라."
-annex.189.t:0 "The CNT-FAI and the Fate of Portugal"
+annex.189.t:0 "전국노동자연합과 포르투갈의 운명"
 annex.189.d:0 "The vile imperialistic reactionaries in Lisboa have finally been forced into the sea, but we are left with the fate of the Portuguese people to decide. Do we release them as their own nation following our rightly guide principles or do we extend our claim to the rest of Iberia?"
 annex.189.a:0 "Release a Portugal where the working man is free!"
 annex.189.b:0 "All of Iberia's workers will be united under us."
@@ -888,7 +888,7 @@ annex.225.t:0 "인도네시아의 운명"
 annex.225.d:0 "Our armies have managed to take control of Indonesia, and the islands themselves are now occupied by us. We have a few options now. We can either puppet the island or take it for ourselves, seeing as it possesses a key position in South East Asia and has many strategically valuable resources. What shall we do?"
 annex.225.a:0 "인도네시아를 해방하라"
 annex.225.b:0 "네덜란드에게 주어라"
-annex.225.c:0 "Transfer it to the Deutsch-Ostasien"
+annex.225.c:0 "독일령 동아시아에게 주어라"
 annex.225.e:0 "점령하라!"
 annex.226.t:0 "트란스아무르의 운명"
 annex.226.d:0 "Our armies have managed to take control of Transamur, and it is now occupied by us. We have a few options now. We can either puppet the land or take it for ourselves, seeing as it possesses a key strategic position in East Asia. What shall we do?"
@@ -950,8 +950,8 @@ annex.236.c:0 "해당 지역을 우리의 동맹 아라비아에게 주자"
 annex.237.t:0 "시나이 정복"
 annex.237.d:0 "The Sinai peninsula, where in the Abrahamic tradition, Moses supposedly met God Himself, is located on the edge of the vital Suez Canal and occupies an important strategic position. With the peninsula now under our control, what should be done with it?"
 annex.237.a:0 "점령하라"
-annex.237.b:0 "Give the region to our Levantine ally"
-annex.237.c:0 "Transfer the area to our Egyptian ally"
+annex.237.b:0 "지역을 우리의 동맹인 레반트에게 주어라"
+annex.237.c:0 "지역을 우리의 동맹인 이집트에게 주어라"
 annex.238.t:0 "필리핀의 운명"
 annex.238.d:0 "Our armies have managed to take control of the Philippines, and the archipelago is now occupied by us. Should we organise a puppet government?"
 annex.238.a:0 "친선 필리핀 정부로 해방시켜라"
@@ -968,9 +968,9 @@ annex.240.d:0 "Our recent annexation of Northern Italy has left us with remnants
 annex.240.a:0 "Give it freely to the Pope"
 annex.240.b:0 "Propose a deal: the land for a submission"
 annex.240.c:0 "점령을 계속하라!"
-annex.241.t:0 "Our Rightful Land"
+annex.241.t:0 "우리의 정당한 땅"
 annex.241.d:0 "A generous power in the north has decided to respect the treaty of 1919 and give back the land they occupied to their rightful owner, us. We'll evidently have to thank them for this great victory of our state."
-annex.241.a:0 "The Papal lands are reunited"
+annex.241.a:0 "교황청 영토가 재통일 되었다"
 annex.242.t:0 "관대한 제안?"
 annex.242.d:0 "The occupying power in the north sent diplomats to Rome today to propose us a diplomatic deal. They would agree to return the lands that were stolen to us during the bloody civil war of 1919 for the simple condition of accepting to stop any independent initiative in our foreign policy, in other words, become a satellite. This proposal, while endangering our sovereignty has the merit of bringing us back the vast territories that we were promised. It will have to be judged and answered to accordingly."
 annex.242.a:0 "제안을 받아들이고 땅을 되찾는다."
@@ -993,7 +993,7 @@ annex.246.b:0 "군사점령을 유지하라!"
 ### Opinion Modifiers ###
 refused_prince:0 "군주 거부"
 occupied_France:0 "프랑스 점령"
-abandoned_entante:0 "우리를 버림!"
+abandoned_entante:0 "우리를 버렸음!"
 forced_king:0 "왕을 받아들임"
 
 ### World Tension ###
