--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -2608,7 +2608,7 @@ hol_not_done_yet:0 "This Eventchain is unfinished."
 
 ### Relations ###
 HOL_german_trade_tolerated:0 "Tolerates German Trade"
-HOL_german_trade_blocked:0 "Blocks German Trade"
+HOL_german_trade_blocked:0 "독일 무역 차단"
 HOL_dislikes_govt:0 "Dislikes Government"
 HOL_trademission:0 "Loosened Trade Barriers"
 HOL_syndicalist_diplo_mission:0 "Small Diplomatic Mission"
@@ -2635,4 +2635,4 @@ radical_socialist_acceptance:0 "§Y급진사회주의§! 수용"
 syndicalist_acceptance:0 "§Y생디칼리즘§! 수용"
 totalist_acceptance:0 "§Y전체주의§! 수용"
 paternal_autocrat_acceptance:0 "§Y세습전제주의§! 수용"
-national_populist_acceptance:0 "§Y국가포퓰리즘§! 수용"
+national_populist_acceptance:0 "§Y민족대중주의§! 수용"
