--- a/Kaiserreich Korean Translation/localisation/KR_Oman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Oman_l_english.yml
@@ -22,9 +22,6 @@ OMA_syndicalist_party_long:0 "Alhizb Alaishtirakiu Aleumaniu"
 OMA_totalist_party:0 "Alhizb Alshuyueiu Aleumaniu"
 OMA_totalist_party_long:0 "Alhizb Alshuyueiu Aleumaniu"
 
-### Leader Descriptions###
-POLITICS_SAID_TAIMUR_DESC:0 "The Al Said dynasty, which had reaped the benefits of British support in the 19th century, stil yet lives. Folllowing the Peace with Honor in 1921, the young Said bin Taimur accelerated through his political education in Muscat. The former Sultan Taimur bin Feisal had prepared a wise council for his son in 1935 when he abdicated the throne. Said bin Taimur was left with a sense of superiority over the Shia in the Truncial coast and the Ibadi tribesman in Oman proper. More concerning was the new Sultan's attitude towards Dhofaris. Said bin Taimur has taxed them mercilessly, and remained silent to the slave trade that opresses Dhofar."
-
 ### Tooltips ###
 EGY_REFUSED:0 "Egypt has refused our offer"
 RAJ_REFUSED:0 "Dominion of India has refused our offer"
@@ -131,7 +128,7 @@ OMA_muscat_railway_company:0 "Muscat Railway Company"
 OMA_muscat_railway_company_desc:0 "The industrial revolution largely passed Oman by in the 19th century, and we are determined to catch it ourselves in the 20th. Lets found a solid state company for managing rail networks, and lay the ties for the first line through the capital to some outlying areas immediately."
 OMA_dhofar_railway:0 "Dhofar Railway"
 OMA_dhofar_railway_desc:0 "Now that we have at least one major rail line though Muscat itself, we need to integrate the rest of Oman with this rail line. Goods and citizens from as far away as Dohfar will be able to get across the entire country in less than a day's travel. Of course this stands to benefit our military as well, as faster transp0ortation means faster troops!"
-OMA_port_of_muscat:0 "Port of Muscat"
+OMA_port_of_muscat:0 "무스카트 항구"
 OMA_port_of_muscat_desc:0 "We have always been a sea trading society, and while our rail makes moving products easier in country, the real profit comes from when we export goods by sea. Connecting the rail lines to the seaways, and building infrastructure to facilitate transportation between them, will really get our economy flowing!"
 OMA_local_manufactury_incentives:0 "Local Manufacturer Incentive"
 OMA_local_manufactury_incentives_desc:0 "We need to provide local incentives in Oman to utilise all the spare labor the state cannot effectively utilise. Manufacturing all the small things citizens need, including appliances and tools, cheap clothing and the like, will reduce our imports and expand our trading opportunities with our trade partners."
@@ -143,13 +140,13 @@ OMA_finish_economical_plan:0 "Finish Economical Plan"
 OMA_finish_economical_plan_desc:0 "We can finally reap the efforts of our years long reform effort in our country. With improved transportation, support for expanded civilian and military factories, and an increased capacity to trade, our economy is humming along, and we continue to add capacity as time goes along."
 OMA_compromises_for_our_independence:0 "Compromises for Our Freedom"
 OMA_compromises_for_our_independence_desc:0 "We are surrounded by hostile forces on the entire peninsula. We will have to make some compromises if we want to survive the coming decade."
-OMA_persian_protection:0 "Persian Protection"
-OMA_persian_protection_desc:0 "Persia has a vested interest "
-OMA_imperial_army_officers:0 "Imperial Army Officers"
+OMA_persian_protection:0 "페르시아 보호"
+OMA_persian_protection_desc:0 "Persia has a vested interest in an ally on the Arabian Peninsula, so will be a good candidate to ask for some protection against our enemies. Better a close ally than one far away like Egypt or India."
+OMA_imperial_army_officers:0 "황실 육군 장교"
 OMA_imperial_army_officers_desc:0 "Persia has demanded that in return for our protection, they be able to embed a small amount of their officers into all the units of our army. While this will give us much needed experience, the people won't like it that much. Still, sacrifices have to be made if we are to weather the coming storm."
-OMA_equipment_efforts:0 "Equipment Efforts"
+OMA_equipment_efforts:0 "장비 개발"
 OMA_equipment_efforts_desc:0 "A relationship with a major regional power has the benefit of military training exercises, and even better observation of their military hardware. Let's take these experiences back to our R&D team and improve the working designs of our military vehicles."
-OMA_prepare_for_resistance:0 "Prepare to Resist"
+OMA_prepare_for_resistance:0 "저항 준비"
 OMA_prepare_for_resistance_desc:0 "We know they are coming, it's just a matter of when now. We need to prepare every man to defend the land we have worked so hard to improve and expand upon. FOR THE IMAM!"
 OMA_call_upon_the_raj:0 "Call Upon the Raj"
 OMA_call_upon_the_raj_desc:0 "India has worked with the Entente to secure the rest of their country. We have a common experience with India, let's petition them, and the Entente, for help from the outside forces that are assembling against us."
