--- a/Kaiserreich Korean Translation/localisation/KR_Papal_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Papal_State_l_english.yml
@@ -314,7 +314,7 @@ papalstate.19.t:0 "Two Sicilies accepts!"
 papalstate.19.d:0 "The Kingdom of Two Sicilies have accepted our request and begun to aid us in modernising our military technology so that we may defend ourselves from the tyranny of syndicalism."
 papalstate.19.a:0 "Great!"
 papalstate.20.t:0 "Two Sicilies supplies some aid"
-papalstate.20.d:0 "The Kingdom of Two Sicilies have accepted our request and while they have not given us as much military aid as we had hoped what they have seen fit to give some hopefully assist us in modernising our army."
+papalstate.20.d:0 "The Kingdom of Two Sicilies have accepted our request and while they have not given us as much military aid as we had hoped what they have seen fit to give should hopefully assist us in modernising our army."
 papalstate.20.a:0 "It's better than nothing."
 papalstate.21.t:0 "Two Sicilies refuses!"
 papalstate.21.d:0 "To our disappointment, the Kingdom of Two Sicilies have refused our request for military aid, claiming that doing so would be a waste of time and resources for their own nation and that the Sicilian army is capable of defending Rome themselves."
