--- a/Kaiserreich Korean Translation/localisation/KR_Portugal_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Portugal_l_english.yml
@@ -73,7 +73,7 @@ POR_herois_do_mari_desc:0 "It is Portugal's destiny to rule the seas, and it alw
 POR_bravery:0 "Royalist Élan"
 POR_bravery_desc:0 "Extensive conditioning and training have made it so that our regular regiments are fearless and ready to act upon their orders at a moment's notice!"
 POR_integralist_ethos:0 "Paz sem Honra"
-POR_integralist_ethos_desc:0 "Humiliated during the Weltkrieg and, again, during the Second Ultimatum, most of the world considers Portugal to be a second rate power that was fortunate enough to maintain it's territorial integrity. This opinion is not shared by most senior cabinet members, however."
+POR_integralist_ethos_desc:0 "Humiliated during the Weltkrieg and, again, during the Second Ultimatum, most of the world considers Portugal to be a second rate power that was fortunate enough to maintain its territorial integrity. However, this opinion is not shared by most senior cabinet members."
 
 ### Traits ###
 german_puppet:0 "독일의 꼭두각시"
@@ -247,7 +247,7 @@ POR_milfac2_desc:0 "We have redirected our primary focus to the expansion and in
 POR_econimical_recovery:0 "Begin the Recovery"
 POR_econimical_recovery_desc:0 "The effects of Black Monday have left our economy in a much more critical condition than that of the Crisis of '26. and our markets are devastated due to an absence of consumers. In order to remedy this situation, substantial effort must be undertaken."
 POR_focus_shift:0 "A Shift in Focus"
-POR_focus_shift_desc:0 "Currently, we do not require the creation of more factories, but we need to upgrade the ones currently have and ensure they work at a swifter pace and at a higher quality. We can make this happen with our currently available resources."
+POR_focus_shift_desc:0 "Currently, we do not require the creation of more factories, but we need to upgrade the ones we currently have and ensure they work at a swifter pace and at a higher quality. We can make this happen with our currently available resources."
 POR_civfac:0 "Consumer Goods Industry"
 POR_civfac_desc:0 "To a certain degree, we need to wean ourselves off of dependency from foreign made industrial goods, especially for the basic necessities of our economy."
 POR_christian_austerity:0 "Christian Austerity"
@@ -342,7 +342,7 @@ POR_totalist_party_long:0 "Federação Maximalista Portuguesa"
 POR_syndicalist_party:0 "CGT"
 POR_syndicalist_party_long:0 "Confederação Geral do Trabalho"
 POR_radical_socialist_party:0 "UAP"
-POR_radical_socialist_long:0 "União Anarquista Portuguesa"
+POR_radical_socialist_party_long:0 "União Anarquista Portuguesa"
 POR_paternal_autocrat_party:0 "ACR"
 POR_paternal_autocrat_party_long:0 "Acção Realista Portuguesa"
 POR_national_populist_party:0 "IL"
@@ -357,21 +357,6 @@ POR_social_conservative_party:0 "PNR"
 POR_social_conservative_party_long:0 "Partido Nacional Republicano"
 POR_authoritarian_democrat_party:0 "CNA"
 POR_authoritarian_democrat_party_long:0 "Cruzada Nun'Álvares"
-
-### Leader Descriptions ###
-
-POLITICS_DUARTE_BRAGANCA_DESC:0 "왕정 복고 이전에 망명 중인 왕족들이 서명한 도버 조약에서 합의한 바대로, 두아르테 2세는 후사가 없던 마누엘 2세로부터 왕위를 물려받았습니다. 1932년 왕위에 오른 뒤, 두아르테 왕은 정부와 그럭저럭 우호적인 관계를 유지하는 한에서 브라질 황실과 캐나다에 망명 중인 영국 왕실과의 유대 관계를 강화하기 위해 노력해 왔습니다."
-POLITICS_MARIA_ADLEAIDE_BRAGANCA_DESC:0 "30년 만에 두 번째 여왕의 자리에 오른 마리아 3세는 자신보다 앞선 과제를 회피해 왔습니다. 어린 여왕은 공주였을 때부터 항상 인기있었고, 항상 가능할 때마다 도움이 필요한 사람들을 도와주기 위해 애썼습니다. 그녀의 온화하고 조신한 이미지와는 달리, 그녀는 왕위에 오른 직후 반-통합주의자라는 인식을 무릅쓰고 당의 과도한 활동을 비난해 왔고, 오직 그녀의 두려움 없는 태도만이 그녀의 인기를 돕습니다."
-POLITICS_MARIA_PUPPET_DESC:0 "As the recently installed Queen of Portugal and the Algarves, Maria Ana I seems content in her role of doing little actual ruling. Her priority is ensuring the preservation of the Monarchy and in restoring ties with the deposed royal family. Her husband's German nationality, once a liability that essentialy locked her out of inheritance, may very well help in this endeavour"
-
-POLITICS_ALEXANDRE_VIEIRA_DESC:0 "Alexandre Vieira is perhaps Portugal's most prestigious and respected leftist leader, which a marked and distingushed career dating back to the early years of the Republic. After being forced into exile in France after the Integralist takeover in 1926, said respect and former contacts, especially among anarchists and syndicalists, may be key to forming a stable coalition as the dust settles from the fall of the monarchy"
-POLITICS_JOSE_CARLOS_RATES_DESC:0 "A veteran in the harsh struggle for Portugal's workers, Jose Carlos Rates entered the political scene in the first years of the republic as a syndicalist leader; however one that strayed far from the anarchist mainstream of Portuguese Syndicalists. Founder of the Portuguese Maximalist Federation, Rates believes in cooperating against imperalism in a wide front, but will likely have issues implementing Totalism in Portugal"
-POLITICS_BENTO_ANTONIO_GONCALVES_DESC:0 "Bento is a long time syndical leader, entering the political arena in the waning years of the Weltkrieg as the conditions for Portuguese workers worsened. As syndicalist repression grew, in 1925 he was forced to flee Portugal after a failed strike, which seeked to emulate the English Revolution in Portuguese soil. Now returned after decades of exile, Bento has the daunting task of recovring Portugal ahead of him"
-
-POLITICS_ANTONIO_RESENDE_DESC:0 "A staunch republican, Antonio was agressive in its attacks against the restoration in 1922, which forced him into exile after he alledgedly advocated for regicide, an accusation he to this day claims to be false. Exile has not been kind to public memory of the Porto politician, but no leadership arose in the PRED that can claim his ideological intensity or credibility, even as he is thankful for those who kept the flame of Republicanism alive in these dark years"
-POLITICS_AFONSO_COSTA_DESC:0 "A leading figure in the First Republic, Afonso Costa has been long been deeply involed with the republican cause in Portugal, and he was one of the architects of that first revolution. The last leader of the former Republic, his prestige was kept intact even after decades of exile in multiple countries, and there is hope that this republic learns from the mistakes of the past. However, the man's advanced age and illing health may very well put said plans in jeorpardy"
-POLITICS_ANTONIO_GRANJO_DESC:0 "Antonio's current leadership of Portuguese Liberal Republicans very well stems for his actions, for he was one of the few who actively attempted to stop the Restoration by taking up arms and urging others to do the same. The years in exile have not been kind to the politician, whose sexagenarian appearance may very well be unfamiliar to those used to the image of the man who attempted to defend the Republic."
-POLITICS_JOAO_CANTO_CASTRO_DESC:0 "The aging admiral's beliefs may seem paradoxical to foreigners, as he has far more in common with monarchists than republicans in Portugal's political areana. However, as he is once again deemed the only man fit to leader, he will try his utmost to be a competent captain of Portugal for one last time, and endeavour to crush those who wish to end Portugal as a nation from whithin such as Iberists and Integralists"
 
 ### Events ###
 cog.1.t:0 "Portuguese Demand the Manikong to Bend the Knee"
