--- a/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
@@ -1,5 +1,67 @@
 l_english:
 
+### Opinion Modifiers ###
+FRA_SWI_1:0 "1932 제네바 파업"
+FRA_SWI_2:0 "사회주의 로망디"
+FRA_SWI_3:0 "Backed Socialists"
+FRA_SWI_3_no:0 "Respected our sovereignty"
+FRA_SWI_4_disband:0 "Oppressed French minorities"
+FRA_SWI_4_respect:0 "Respected constitution"
+FRA_SWI_5:0 "Blasted traitors!"
+FRA_demand_romandy:0 "Demanded Haute-Savoie"
+FRA_demand_romandy2:0 "Demanded the Romandie"											 
+FRA_romandy_ease:0 "Eased tensions"
+SWI_accept_romandy:0 "Despicable Neutrals"
+SWI_refuse_romandy:0 "Insolent fools"
+SWI_refuse_romandy_ger:0 "Swiss bravery"
+GER_warning_FRA:0 "독일의 경고"
+GER_warning_SWI:0 "독일의 보호"
+SWI_abandon:0 "우리를 저버림!"
+SWI_abandon_FRA:0 "버려진 스위스"
+SWI_FRA_victory:0 "오트사부아 문제가 해결됨"
+SWI_GER_gratitude:0 "우리를 구해줌"
+GER_FRA_WAR_start:0 "Warmongering brutes"
+join_international:0 "인터내셔널 가입"
+loth_1:0 "Armed incidents in Lothringen"
+loth_2:0 "Armed incidents in Nanzig"
+loth_3:0 "Public Denouncement"
+WK2_plus:0 "Weltkrieg position"
+WK2_minus:0 "Weltkrieg position"
+
+### Tooltips ###
+can_demand_romandy:0 "오트사부아 내의 불안"
+SWI_white:0 "이제 오트사부아를 요구할 수 있습니다."
+loth_armed:0 "로렌에서의 무력 충돌"
+
+### Tensions ###
+FRA_damand_romandy_threat:0 "프랑스의 요구"
+FRA_damand_romandy_threat_no:0 "Eased tensions"
+FRA_SWI_neutral:0 "중립"
+FRA_annex_romandy:0 "오트사부아 합병"
+FRA_SWI_back_down:0 "후퇴함"
+FRA_SWI_ignore_ultimatum:0 "독일의 최후통첩을 무시함"
+FRA_SWI_ignore_ultimatum_AUS:0 "오스트리아의 최후통첩을 무시함"														   
+SWI_FRA_war:0 "스위스 프랑스 전쟁"
+Romandie_annex:0 "오트사부아 합병"
+IIweltkrieg:0 "2차 세계대전"
+join_eng:0 "Red Menace"
+abandon_eng:0 "Retained peace"
+ger_cult_gen:0 "문화 탄압"
+loth_armed_1:0 "Army manoeuvres in Elsass-Lothringen"
+fra_manuver:0 "Manoeuvres in Franche-Comte"
+fra_manuver_no:0 "No Manoeuvres"
+leval_forget:0 "A harmless incident"
+pulled_back_leval:0 "Pulled back"
+alsace_back_down:0 "후퇴함"
+alsac_annex:0 "알자스-로레인 합병"
+
+### Ideas ###
+SWI_cave_in:0 "스위스 항복"
+
+### Factions ###
+anti_FRA_block:0 "반프랑스 동맹"
+Syndicalist_Internationale:0 "생디칼리스트 인터내셔널"
+
 ### Events ###
 prewar.1.t:0 "1932년 제네바 파업 5주년"
 prewar.1.d:0 "5년 전 오늘, 제네바의 노동자들은 이 쟁의가 (로만디로 알려진) 스위스 서부의 프랑스어권 지역으로 퍼져나갈 것이라고 위협하며 경제적 사회적 개혁을 요구하는 주요 노동 쟁의를 시작했습니다. 프랑스 코뮌이 잠재적으로 혁명에 영향을 끼칠 것을 두려워한 베른의 중앙 정부는 파업을 멈추기 위해 연방 군대를 파견하여 신속하게 대응했습니다. 뒤이은 폭력 사태로 제네바에서 13명이 숨졌고 100명이 넘는 사람이 다쳤습니다. 이 사건으로 베른과 로만디 간에 쓰디쓴 불화가 남았고, 이는 이후 몇년 동안 치유되지 못했습니다. 최근 프랑스의 발전에 고무된 급진 좌파 세력은 다시 한번 요구하기 시작했고 다가오는 지방 선거에 사회당 후보들을 출마시킬 예정입니다. 하지만 전통적으로 로만디를 텃밭으로 가지고 있는 사회민주당은 노동 조합과 함께 임금 인상, 근로 시간 등 많은 정책을 포함하는 "노동의 평화" 개혁안을 만들어냈습니다. 이 계혁의 핵심 중 하나는 최근 일어난 시계 제조사들의 대규모 공장폐쇄를 끝내는 것입니다. 사회민주당 후보는 이 개혁으로 재선될 것이라고 기대하고 있으며, 이 개혁이 베른 연방 정부의 보수파와 급진 좌파 사이의 대치 상황을 완화해주기를 희망합니다."
@@ -203,65 +265,3 @@ prewar.68.b:0 "Rather not"
 prewar.69.t:0 "The End of the Franco-German war"
 prewar.69.d:0 "For good or ill, the war between France and Germany is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 prewar.69.a:0 "Great!"
-
-### Opinion Modifiers ###
-FRA_SWI_1:0 "1932 제네바 파업"
-FRA_SWI_2:0 "Socialist Romandie"
-FRA_SWI_3:0 "Backed Socialists"
-FRA_SWI_3_no:0 "Respected our sovereignty"
-FRA_SWI_4_disband:0 "Oppressed French minorities"
-FRA_SWI_4_respect:0 "Respected constitution"
-FRA_SWI_5:0 "Blasted traitors!"
-FRA_demand_romandy:0 "Demanded Haute-Savoie"
-FRA_demand_romandy2:0 "Demanded the Romandie"											 
-FRA_romandy_ease:0 "Eased tensions"
-SWI_accept_romandy:0 "Despicable Neutrals"
-SWI_refuse_romandy:0 "Insolent fools"
-SWI_refuse_romandy_ger:0 "Swiss bravery"
-GER_warning_FRA:0 "독일의 경고"
-GER_warning_SWI:0 "독일의 보호"
-SWI_abandon:0 "Abandoned us!"
-SWI_abandon_FRA:0 "Abandoned the Swiss"
-SWI_FRA_victory:0 "오트사부아 resolved"
-SWI_GER_gratitude:0 "Saved us"
-GER_FRA_WAR_start:0 "Warmongering brutes"
-join_international:0 "인터내셔널 가입"
-loth_1:0 "Armed incidents in Lothringen"
-loth_2:0 "Armed incidents in Nanzig"
-loth_3:0 "Public Denouncement"
-WK2_plus:0 "Weltkrieg position"
-WK2_minus:0 "Weltkrieg position"
-
-### Tooltips ###
-can_demand_romandy:0 "오트사부아 내의 불안"
-SWI_white:0 "이제 오트사부아를 요구할 수 있습니다."
-loth_armed:0 "로렌에서의 무력 충돌"
-
-### Tensions ###
-FRA_damand_romandy_threat:0 "프랑스의 요구"
-FRA_damand_romandy_threat_no:0 "Eased tensions"
-FRA_SWI_neutral:0 "중립"
-FRA_annex_romandy:0 "오트사부아 합병"
-FRA_SWI_back_down:0 "후퇴함"
-FRA_SWI_ignore_ultimatum:0 "Ignored German Ultimatum"
-FRA_SWI_ignore_ultimatum_AUS:0 "Ignored Austrian Ultimatum"														   
-SWI_FRA_war:0 "스위스 프랑스 전쟁"
-Romandie_annex:0 "오트사부아 합병"
-IIweltkrieg:0 "2차 세계대전"
-join_eng:0 "Red Menace"
-abandon_eng:0 "Retained peace"
-ger_cult_gen:0 "Cultural Genocide"
-loth_armed_1:0 "Army manoeuvres in Elsass-Lothringen"
-fra_manuver:0 "Manoeuvres in Franche-Comte"
-fra_manuver_no:0 "No Manoeuvres"
-leval_forget:0 "A harmless incident"
-pulled_back_leval:0 "Pulled back"
-alsace_back_down:0 "후퇴함"
-alsac_annex:0 "알자스-로레인 합병"
-
-### Ideas ###
-SWI_cave_in:0 "스위스 항복"
-
-### Factions ###
-anti_FRA_block:0 "Anti-French Block"
-Syndicalist_Internationale:0 "생디칼리스트 인터내셔널"
